--- a/SpointLiteVersion/RTPFactura/Report3.rdlc
+++ b/SpointLiteVersion/RTPFactura/Report3.rdlc
@@ -527,8 +527,8 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>DataSet1</DataSetName>
-        <Top>6.00479cm</Top>
+        <DataSetName>DataSet2</DataSetName>
+        <Top>4.33449cm</Top>
         <Left>0cm</Left>
         <Height>1.2cm</Height>
         <Width>17.12117cm</Width>
@@ -559,7 +559,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>2.1384in</Top>
+        <Top>1.4808in</Top>
         <Height>0.19792in</Height>
         <Width>0.48403in</Width>
         <ZIndex>1</ZIndex>
@@ -593,7 +593,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>2.1384in</Top>
+        <Top>1.4808in</Top>
         <Left>0.51181in</Left>
         <Height>0.19792in</Height>
         <Width>2.12046in</Width>
@@ -628,7 +628,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>2.15228in</Top>
+        <Top>1.49468in</Top>
         <Left>3.49837in</Left>
         <Height>0.19792in</Height>
         <Width>0.42149in</Width>
@@ -663,7 +663,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>2.15228in</Top>
+        <Top>1.49468in</Top>
         <Left>3.91986in</Left>
         <Height>0.19792in</Height>
         <Width>2.82076in</Width>
@@ -695,7 +695,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox27</rd:DefaultName>
-        <Top>1.93006in</Top>
+        <Top>1.27246in</Top>
         <Left>4.69071in</Left>
         <Height>0.18056in</Height>
         <Width>2.13431cm</Width>
@@ -717,7 +717,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!vendedor.Value, "DataSet1")</Value>
+                <Value>=First(Fields!vendedor.Value, "DataSet2")</Value>
                 <Style>
                   <FontSize>8pt</FontSize>
                 </Style>
@@ -729,7 +729,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox27</rd:DefaultName>
-        <Top>1.93006in</Top>
+        <Top>1.27246in</Top>
         <Left>5.54488in</Left>
         <Height>0.18056in</Height>
         <Width>1.18185in</Width>
@@ -750,7 +750,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>Factura No.:</Value>
+                <Value>Cotización No.:</Value>
                 <Style>
                   <FontSize>8pt</FontSize>
                   <FontWeight>Bold</FontWeight>
@@ -763,9 +763,9 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>1.39371in</Top>
+        <Top>0.73611in</Top>
         <Height>0.19792in</Height>
-        <Width>0.78611in</Width>
+        <Width>0.89722in</Width>
         <ZIndex>7</ZIndex>
         <Style>
           <Border>
@@ -797,7 +797,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>1.61941in</Top>
+        <Top>0.96181in</Top>
         <Left>0.00001in</Left>
         <Height>0.19792in</Height>
         <Width>0.54653in</Width>
@@ -819,7 +819,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!cliente.Value, "DataSet1")</Value>
+                <Value>=First(Fields!cliente.Value, "DataSet2")</Value>
                 <Style>
                   <FontSize>8pt</FontSize>
                 </Style>
@@ -831,7 +831,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox31</rd:DefaultName>
-        <Top>1.61941in</Top>
+        <Top>0.96181in</Top>
         <Left>0.56042in</Left>
         <Height>0.19792in</Height>
         <Width>1in</Width>
@@ -851,7 +851,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!idfactura.Value, "DataSet1")</Value>
+                <Value>=First(Fields!idcotizacion.Value, "DataSet2")</Value>
                 <Style>
                   <FontSize>8pt</FontSize>
                 </Style>
@@ -863,8 +863,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox31</rd:DefaultName>
-        <Top>1.39371in</Top>
-        <Left>0.78612in</Left>
+        <Top>0.73611in</Top>
+        <Left>0.89722in</Left>
         <Height>0.19792in</Height>
         <Width>1in</Width>
         <ZIndex>10</ZIndex>
@@ -896,7 +896,6 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>0.6576in</Top>
         <Left>2.96226in</Left>
         <Height>0.19792in</Height>
         <Width>0.78611in</Width>
@@ -931,7 +930,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>1.39371in</Top>
+        <Top>0.73611in</Top>
         <Left>4.69071in</Left>
         <Height>0.18056in</Height>
         <Width>0.47295in</Width>
@@ -953,7 +952,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!fecha.Value, "DataSet1")</Value>
+                <Value>=First(Fields!fecha.Value, "DataSet2")</Value>
                 <Style>
                   <FontSize>8pt</FontSize>
                   <FontWeight>Normal</FontWeight>
@@ -967,7 +966,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox27</rd:DefaultName>
-        <Top>1.39371in</Top>
+        <Top>0.73611in</Top>
         <Left>5.17754in</Left>
         <Height>0.18056in</Height>
         <Width>1.18185in</Width>
@@ -1000,7 +999,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox23</rd:DefaultName>
-        <Top>0.89719in</Top>
+        <Top>0.23959in</Top>
         <Left>2.42583in</Left>
         <Height>0.19792in</Height>
         <Width>1.76497in</Width>
@@ -1017,22 +1016,12 @@
       </Textbox>
     </ReportItems>
     <Height>9.39959cm</Height>
-    <Style>
-      <Border>
-        <Style>None</Style>
-      </Border>
-      <TopBorder>
-        <Style>Solid</Style>
-      </TopBorder>
-      <BottomBorder>
-        <Style>Solid</Style>
-      </BottomBorder>
-    </Style>
+    <Style />
   </Body>
   <Width>17.18262cm</Width>
   <Page>
     <PageFooter>
-      <Height>1.1875in</Height>
+      <Height>1.11062in</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -1054,8 +1043,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
-          <Top>0.04167in</Top>
-          <Left>5.17754in</Left>
+          <Left>5.19658in</Left>
           <Height>0.19792in</Height>
           <Width>0.4375in</Width>
           <Style>
@@ -1086,8 +1074,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
-          <Top>0.25347in</Top>
-          <Left>5.17754in</Left>
+          <Top>0.2118in</Top>
+          <Left>5.19658in</Left>
           <Height>0.19792in</Height>
           <Width>0.4375in</Width>
           <ZIndex>1</ZIndex>
@@ -1119,8 +1107,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
-          <Top>0.46528in</Top>
-          <Left>5.17754in</Left>
+          <Top>0.42361in</Top>
+          <Left>5.19658in</Left>
           <Height>0.19792in</Height>
           <Width>0.55208in</Width>
           <ZIndex>2</ZIndex>
@@ -1141,7 +1129,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>=First(Fields!itbis.Value, "DataSet1")</Value>
+                  <Value>=First(Fields!totalitbis.Value, "DataSet2")</Value>
                   <Style>
                     <FontSize>8pt</FontSize>
                     <Format>#,0.00;(#,0.00)</Format>
@@ -1154,8 +1142,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox4</rd:DefaultName>
-          <Top>0.25347in</Top>
-          <Left>5.62893in</Left>
+          <Top>0.2118in</Top>
+          <Left>5.64797in</Left>
           <Height>0.19792in</Height>
           <Width>1.0978in</Width>
           <ZIndex>3</ZIndex>
@@ -1174,7 +1162,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>=First(Fields!totaldescuento.Value, "DataSet1")</Value>
+                  <Value>=First(Fields!Total1.Value, "DataSet2")</Value>
                   <Style>
                     <FontSize>8pt</FontSize>
                     <Format>#,0.00;(#,0.00)</Format>
@@ -1187,8 +1175,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox4</rd:DefaultName>
-          <Top>0.46528in</Top>
-          <Left>5.72962in</Left>
+          <Top>0.42361in</Top>
+          <Left>5.74866in</Left>
           <Height>0.19792in</Height>
           <Width>0.99711in</Width>
           <ZIndex>4</ZIndex>
@@ -1200,8 +1188,8 @@
           </Style>
         </Textbox>
         <Line Name="Line4">
-          <Top>0.52083in</Top>
-          <Left>0.00001in</Left>
+          <Top>0.47916in</Top>
+          <Left>0.01905in</Left>
           <Height>0in</Height>
           <Width>2.05208in</Width>
           <ZIndex>5</ZIndex>
@@ -1212,8 +1200,8 @@
           </Style>
         </Line>
         <Line Name="Line5">
-          <Top>0.52083in</Top>
-          <Left>2.23594in</Left>
+          <Top>0.47916in</Top>
+          <Left>2.25498in</Left>
           <Height>0in</Height>
           <Width>2.09129in</Width>
           <ZIndex>6</ZIndex>
@@ -1241,8 +1229,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox10</rd:DefaultName>
-          <Top>0.53472in</Top>
-          <Left>0.3382in</Left>
+          <Top>0.49305in</Top>
+          <Left>0.35724in</Left>
           <Height>0.20833in</Height>
           <Width>1.11458in</Width>
           <ZIndex>7</ZIndex>
@@ -1274,8 +1262,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox10</rd:DefaultName>
-          <Top>0.53472in</Top>
-          <Left>2.80528in</Left>
+          <Top>0.49305in</Top>
+          <Left>2.82432in</Left>
           <Height>0.20833in</Height>
           <Width>1.11458in</Width>
           <ZIndex>8</ZIndex>
@@ -1307,8 +1295,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox8</rd:DefaultName>
-          <Top>0.90229in</Top>
-          <Left>2.42583in</Left>
+          <Top>0.86062in</Top>
+          <Left>2.44487in</Left>
           <Height>0.25in</Height>
           <Width>1.6875in</Width>
           <ZIndex>9</ZIndex>
@@ -1328,6 +1316,7 @@
           <Style>None</Style>
         </Border>
         <TopBorder>
+          <Color>Black</Color>
           <Style>Dashed</Style>
           <Width>0.75pt</Width>
         </TopBorder>
@@ -1335,40 +1324,37 @@
     </PageFooter>
     <LeftMargin>0.6in</LeftMargin>
     <RightMargin>0.5in</RightMargin>
+    <TopMargin>0.2in</TopMargin>
     <Style />
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="DataSet1">
+    <DataSource Name="DataSet2">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>c7013bfb-dfce-4086-9044-6270429127af</rd:DataSourceID>
+      <rd:DataSourceID>7d69fc59-3f9e-48cc-bc1a-434caf576bce</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DataSet1">
+    <DataSet Name="DataSet2">
       <Query>
-        <DataSourceName>DataSet1</DataSourceName>
+        <DataSourceName>DataSet2</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
-        <Field Name="IdDetalle">
-          <DataField>IdDetalle</DataField>
+        <Field Name="idDetalle">
+          <DataField>idDetalle</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
-        <Field Name="idfactura">
-          <DataField>idfactura</DataField>
+        <Field Name="idcotizacion">
+          <DataField>idcotizacion</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
-        <Field Name="idventa">
-          <DataField>idventa</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="idproducto">
-          <DataField>idproducto</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
+        <Field Name="Ref">
+          <DataField>Ref</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="descripcion">
           <DataField>descripcion</DataField>
@@ -1402,8 +1388,12 @@
           <DataField>totaldescuento</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
-        <Field Name="idfactura1">
-          <DataField>idfactura1</DataField>
+        <Field Name="idventa">
+          <DataField>idventa</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="idcotizacion1">
+          <DataField>idcotizacion1</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
         <Field Name="fecha">
@@ -1422,10 +1412,6 @@
           <DataField>vendedor</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="producto">
-          <DataField>producto</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
         <Field Name="precio1">
           <DataField>precio1</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
@@ -1442,17 +1428,29 @@
           <DataField>Total1</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
+        <Field Name="Status">
+          <DataField>Status</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="idcliente">
+          <DataField>idcliente</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="totalitbis">
+          <DataField>totalitbis</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>DataSet1</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Toshiba\source\repos\SpointLiteVersion\SpointLiteVersion\DataSet\DataSet1.xsd</rd:SchemaPath>
-        <rd:TableName>sp_reporte_venta_back</rd:TableName>
+        <rd:DataSetName>DataSet2</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\Toshiba\source\repos\SpointLiteVersion\SpointLiteVersion\DataSet\DataSet2.xsd</rd:SchemaPath>
+        <rd:TableName>sp_reporte_cotizacion_back</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
-        <rd:TableAdapterName>sp_reporte_venta_backTableAdapter</rd:TableAdapterName>
+        <rd:TableAdapterName>sp_reporte_cotizacion_backTableAdapter</rd:TableAdapterName>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
   <rd:ReportUnitType>Inch</rd:ReportUnitType>
-  <rd:ReportID>80dee277-b5dd-40c3-ba19-158a8502e6f7</rd:ReportID>
+  <rd:ReportID>a1ae9989-203a-49de-a6ca-8035e7fb8541</rd:ReportID>
 </Report>
